--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -43,6 +43,7 @@
 }
 
 .image-placeholder {
+    position: relative;
     width: 100%;
     max-width: 100%;
     height: auto;
@@ -55,4 +56,14 @@
     width: 100%;
     height: auto;
     border-radius: 5px;
+}
+
+.home-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    text-align: center;
 }
